Lap 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-deployment
  namespace: reactapp
spec:
  tls:
    - hosts:
        - edu.info
      secretName: my-certificate
  rules:
    - host: edu.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-deployment
                port:
                  number: 3000
